--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,119 +1,107 @@
-<header class="header">
-   <div class="container header-menu">
-    <div class="header-wrap-desk">
-     <nav class="navigation">
-        <a class="logo" href="../index.html">watchcharm</a>
-     <ul class="nav-list">
-        <li>
-            <a class="nav-link" href="./hero.html">Home</a>
-        </li>
-        <li>
-            <a class="nav-link" href="./about.html">About Us</a>
-        </li>
-        <li>
-            <a class="nav-link" href="./catalog.html">Catalog</a>
-        </li>
-        <li>
-            <a class="nav-link" href="./sale.html">Sale</a>
-        </li>
-        <li>
-            <a class="nav-link" href="./reviews.html">Reviews</a>
-        </li>
-        <li>
-            <a class="nav-link" href="./contact.html">Contact Us</a>
-        </li>
-    </ul>
-</nav>
-<div class="header-soc-wrap">
-    <ul class="nav-soc">
-        <li class="nav-soc-link">
-            <a href="https://www.facebook.com/goITclub/">
-                <svg width="20" height="20">
-                    <use href="../img/icons.svg#icon-facebook"></use>
-                </svg>
-            </a>
-        </li>
-        <li class="nav-soc-link">
-            <a href="https://www.instagram.com/goitclub/">
-                <svg width="20" height="20">
-                    <use href="../img/icons.svg#icon-instagram"></use>
-                </svg>
-            </a>
-        </li>
-        <li class="nav-soc-link">
-            <a href="https://www.youtube.com/c/GoIT">
-                <svg width="20" height="20">
-                    <use href="../img/icons.svg#icon-youtube"></use>
-                </svg>
-            </a>
-        </li>
-    </ul>
-</div>
-</div>
-<!-- MOB-HEADER -->
-<div class="header-mob">
-    <nav class="header-nav-mob"><a href="../index.html" class="logo-mob">watchcharm</a>
-        <button type="button" class="header-btn">
-            <svg class="header-btn-icon" width="34" height="34">
-                <use href="../img/icons.svg#icon-menu"></use>
-            </svg>
-        </button>
-    </nav>
-</div>
-<!-- MOB-HEADER -->
-</div>
-</header>
-
-<!--mob-menu-->
-
-<div class="mob-menu">
-          <button type="button" class="menu-close-bth">
-            <svg class="menu-close-icon" width="17" height="17">
-                <use href="../img/icons.svg#icon-close"></use>
-            </svg>
-        </button>
-    <div class="menu">
-        <nav class="mob-menu-nav">
-            <ul class="mob-menu-list">
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="./hero.html">Home</a></li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="./about.html">About Us</a></li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="./catalog.html">Catalog</a></li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="./sale.html">Sale</a></li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="./reviews.html">Reviews</a></li>
-                <li class="mob-menu-item">
-                    <a class="mob-menu-link" href="./contact.html">Contact Us</a></li>
+<header class="header" id="header">
+    <div class="container header-container">
+        <a href="" class="header-logo">watchcharm</a>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li class="header-nav-item">
+                    <a href="./index.html" class="header-nav-link current">Home</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="#about" class="header-nav-link">About Us</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="#catalog" class="header-nav-link">Catalog</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="#sale" class="header-nav-link">Sale</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="#reviews" class="header-nav-link">Reviews</a>
+                </li>
+                <li class="header-nav-item">
+                    <a href="#contact" class="header-nav-link">Contact Us</a>
+                </li>
             </ul>
         </nav>
+        <ul class="header-soc-list">
+            <li class="header-soc-item">
+                <a href="https://www.facebook.com/goITclub/" class="header-soc-link" target="_blank">
+                    <svg width="20" height="20">
+                        <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="header-soc-item">
+                <a href="https://www.instagram.com/goitclub/" class="header-soc-link" target="_blank">
+                    <svg width="20" height="20">
+                        <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="header-soc-item">
+                <a href="https://www.youtube.com/c/GoIT" class="header-soc-link" target="_blank">
+                    <svg width="20" height="20">
+                        <use href="./img/icons.svg#icon-youtube"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+        <button class="menu-btn" type="button">
+            <svg class="menu-icon" width="34" height="34">
+                <use href="./img/icons.svg#icon-menu"></use>
+            </svg>
+        </button>
     </div>
-    <div class="mob-menu-wrap">
-        <ul class="mob-soc-list">
-            <li class="mob-soc-item">
-                <a class="team-social-link" href="https://www.facebook.com/goITclub/">
-                    <svg width="18" height="18">
-                        <use href="../img/icons.svg#icon-facebook"></use>
+    <div class="mob-menu">
+        <button class="menu-close-btn">
+            <svg class="menu-close-icon" width="34" height="34">
+                <use href="./img/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+        <nav class="menu-nav">
+            <ul class="menu-nav-list">
+                <li class="menu-nav-item">
+                    <a href="./index.html" class="menu-nav-link current">Home</a>
+                </li>
+                <li class="menu-nav-item">
+                    <a href="#about" class="menu-nav-link">About Us</a>
+                </li>
+                <li class="menu-nav-item">
+                    <a href="#catalog" class="menu-nav-link">Catalog</a>
+                </li>
+                <li class="menu-nav-item">
+                    <a href="#sale" class="menu-nav-link">Sale</a>
+                </li>
+                <li class="menu-nav-item">
+                    <a href="#reviews" class="menu-nav-link">Reviews</a>
+                </li>
+                <li class="menu-nav-item">
+                    <a href="#contact" class="menu-nav-link">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+        <ul class="menu-soc-list">
+            <li class="menu-soc-item">
+                <a href="https://www.facebook.com/goITclub/" class="menu-soc-link" target="_blank">
+                    <svg width="20" height="20">
+                        <use href="./img/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
-            <li class="mob-soc-item">
-                <a class="team-social-link" href="https://www.instagram.com/goitclub/">
-                    <svg width="18" height="18">
-                        <use href="../img/icons.svg#icon-instagram"></use>
+            <li class="menu-soc-item">
+                <a href="https://www.instagram.com/goitclub/" class="menu-soc-link" target="_blank">
+                    <svg width="20" height="20">
+                        <use href="./img/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
-            <li class="mob-soc-item">
-                <a class="team-social-link" href="https://www.youtube.com/c/GoIT">
-                    <svg width="18" height="18">
+            <li class="menu-soc-item">
+                <a href="https://www.youtube.com/c/GoIT" class="menu-soc-link" target="_blank">
+                    <svg width="20" height="20">
                         <use href="./img/icons.svg#icon-youtube"></use>
                     </svg>
                 </a>
             </li>
         </ul>
     </div>
-</div>
-</div>
+</header>
