--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,244 +1,229 @@
 .header {
-    padding: 20px 0;
-    border-bottom: 1px solid #e7e9fc;
+  padding: 20px 0;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header-logo {
-    font-weight: 500;
-    letter-spacing: -0.02em;
+  font-weight: 500;
+  letter-spacing: -0.02em;
 }
-
-.header-nav {}
-
 .header-nav-list {
-    display: none;
+  display: none;
 }
-
-.header-nav-item {}
-
-.header-nav-link {}
 
 .header-soc-list {
-    display: none;
+  display: none;
 }
 
-.header-soc-item {}
-
-.header-soc-link {}
-
 .menu-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: none;
-    stroke: #0c0c0c;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  stroke: #0c0c0c;
 }
 
 .mob-menu {
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    right: 0;
-    width: 200px;
-    height: 100%;
-    background-image: url(../img/header/menubg-mob.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 240px;
-    padding-bottom: 40px;
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  background-image: url(./img/header/menubg-mob.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 240px;
+  padding-bottom: 40px;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .mob-menu.is-open {
-    visibility: visible;
-    opacity: 1;
-    pointer-events: auto;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 2dppx),
-(min-resolution: 192dpi) {
-    .mob-menu {
-        background-image: url(../img/header/menubg-mob-2x.jpg);
-    }
+  (min-resolution: 2dppx),
+  (min-resolution: 192dpi) {
+  .mob-menu {
+    background-image: url(./img/header/menubg-mob-2x.jpg);
+  }
 }
 
 .menu-close-btn {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    border: none;
-    background-color: transparent;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border: none;
+  background-color: transparent;
 }
 
-.menu-nav {}
-
 .menu-nav-list {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 
 .menu-nav-item {
-    text-align: center;
+  text-align: center;
 }
 
 .menu-nav-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.29;
-    color: #fbfbfb;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  color: #fbfbfb;
 }
 
 .menu-nav-link.current {
-    display: block;
-    position: relative;
-    margin-bottom: 10px;
+  display: block;
+  position: relative;
+  margin-bottom: 10px;
 }
 
 .menu-nav-link.current::after {
-    content: '';
-    position: absolute;
-    width: 9px;
-    height: 8px;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 50%;
-    background-color: #3350e9;
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 8px;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  background-color: #3350e9;
 }
 
 .menu-soc-list {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
-.menu-soc-item {}
-
 .menu-soc-link {
-    border: 1px solid rgba(251, 251, 251, 0.1);
+  border: 1px solid rgba(251, 251, 251, 0.1);
+  border-radius: 10px;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #fbfbfb;
+  opacity: 0.8;
+}
+
+.menu-soc-link:active {
+  opacity: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding: 26px 0;
+  }
+
+  .header-logo {
+    font-size: 20px;
+  }
+
+  .menu-icon {
+    width: 40px;
+    height: 40px;
+  }
+
+  .mob-menu {
+    width: 330px;
+    padding-top: 310px;
+    padding-bottom: 50px;
+    background-image: url(./img/header/menubg-tab.jpg);
+  }
+
+  @media screen and (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 2dppx),
+    (min-resolution: 192dpi) {
+    .mob-menu {
+      background-image: url(./img/header/menubg-tab-2x.jpg);
+    }
+  }
+
+  .menu-nav-list {
+    gap: 32px;
+  }
+
+  .menu-close-btn {
+    top: 26px;
+    right: 32px;
+  }
+
+  .menu-close-icon {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header-nav-list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .header-soc-list {
+    display: flex;
+    gap: 10px;
+  }
+
+  .header-nav-item {
+    padding-bottom: 10px;
+  }
+
+  .header-nav-link {
+    position: relative;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+  }
+
+  .header-nav-link.current::after {
+    content: '';
+    position: absolute;
+    top: 18px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #3350e9;
+  }
+
+  .header-soc-link {
+    border: 1px solid rgba(12, 12, 12, 0.1);
     border-radius: 10px;
     padding: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
-    fill: #fbfbfb;
-    opacity: 0.8;
-}
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.menu-soc-link:active {
-    opacity: 1;
-}
+  .header-soc-link:hover,
+  .header-soc-link:focus {
+    fill: #3350e9;
+  }
 
-@media screen and (min-width: 768px) {
-    .header {
-        padding: 26px 0;
-    }
-
-    .header-logo {
-        font-size: 20px;
-    }
-
-    .menu-icon {
-        width: 40px;
-        height: 40px;
-    }
-
-    .mob-menu {
-        width: 330px;
-        padding-top: 310px;
-        padding-bottom: 50px;
-        background-image: url(../img/header/menubg-tab.jpg);
-    }
-
-    @media screen and (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 2dppx),
-    (min-resolution: 192dpi) {
-        .mob-menu {
-            background-image: url(../img/header/menubg-tab-2x.jpg);
-        }
-    }
-
-    .menu-nav-list {
-        gap: 32px;
-    }
-
-    .menu-close-btn {
-        top: 26px;
-        right: 32px;
-    }
-
-    .menu-close-icon {
-        width: 40px;
-        height: 40px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .header-nav-list {
-        display: flex;
-        gap: 40px;
-    }
-
-    .header-soc-list {
-        display: flex;
-        gap: 10px;
-    }
-
-    .header-nav-item {
-        padding-bottom: 10px;
-    }
-
-    .header-nav-link {
-        position: relative;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.29;
-    }
-
-    .header-nav-link.current::after {
-        content: '';
-        position: absolute;
-        top: 18px;
-        left: 50%;
-        transform: translateX(-50%);
-        display: block;
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        background-color: #3350e9;
-    }
-
-    .header-soc-link {
-        border: 1px solid rgba(12, 12, 12, 0.1);
-        border-radius: 10px;
-        padding: 8px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    .header-soc-link:hover,
-    .header-soc-link:focus {
-        fill: #3350e9;
-    }
-
-    .menu-btn {
-        display: none;
-    }
+  .menu-btn {
+    display: none;
+  }
 }
