--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -14,7 +14,7 @@
           just a timekeeping device – it's a statement piece that reflects your
           personality and style. So why settle for anything less than the best?
         </p>
-        <a class="about-btn-us" href="#Catalog">View catalog</a>
+        <a class="about-btn-us" href="#catalog">View catalog</a>
       </div>
 
       <picture class="about-image">
