--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -20,26 +20,26 @@
       <picture class="about-image">
         <source
           srcset="
-            ./img/about/aboutdesktop1x-min.jpg 1x,
-            ./img/about/aboutdesktop2x-min.jpg 2x
+            ./img/about/aboutdesktop1x-min.png 1x,
+            ./img/about/aboutdesktop2x-min.png 2x
           "
           media="(min-width: 1280px)"
         />
         <source
           srcset="
-            ./img/about/abouttab1x-min.jpg 1x,
-            ./img/about/abouttab2x-min.jpg 2x
+            ./img/about/abouttab1x-min.png 1x,
+            ./img/about/abouttab2x-min.png 2x
           "
           media="(min-width: 768px)"
         />
         <source
           srcset="
-            ./img/about/aboutmob1x-min.jpg 1x,
-            ./img/about/aboutmob2x-min.jpg 2x
+            ./img/about/aboutmob1x-min.png 1x,
+            ./img/about/aboutmob2x-min.png 2x
           "
           media="(max-width: 767px)"
         />
-        <img src="./img/about/abouttab1x-min.jpg" alt="Watch" />
+        <img src="./img/about/abouttab1x-min.png" alt="Watch" />
       </picture>
     </div>
   </div>
