--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -54,19 +54,19 @@
 
       <picture>
         <source
-          srcset="./img/contact/desk1x.jpg 1x, ./img/contact/desk2x.jpg 2x"
+          srcset="./img/contact/desk1x.png 1x, ./img/contact/desk2x.png 2x"
           media="(min-width: 1280px)"
         />
         <source
-          srcset="./img/contact/tab1x.jpg 1x, ./img/contact/tab2x.jpg 2x"
+          srcset="./img/contact/tab1x.png 1x, ./img/contact/tab2x.png 2x"
           media="(min-width: 768px)"
         />
         <source
-          srcset="./img/contact/mob1x.jpg 1x, ./img/contact/mob2x.jpg 2x"
+          srcset="./img/contact/mob1x.png 1x, ./img/contact/mob2x.png 2x"
           media="(max-width: 767px)"
         />
 
-        <img src="./img/contact/tab1x.jpg" alt="watch picture" />
+        <img src="./img/contact/tab1x.png" alt="watch picture" />
       </picture>
     </div>
   </div>
