--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,107 +1,135 @@
 <header class="header" id="header">
-    <div class="container header-container">
-        <a href="" class="header-logo">watchcharm</a>
-        <nav class="header-nav">
-            <ul class="header-nav-list">
-                <li class="header-nav-item">
-                    <a href="./index.html" class="header-nav-link current">Home</a>
-                </li>
-                <li class="header-nav-item">
-                    <a href="#about" class="header-nav-link">About Us</a>
-                </li>
-                <li class="header-nav-item">
-                    <a href="#catalog" class="header-nav-link">Catalog</a>
-                </li>
-                <li class="header-nav-item">
-                    <a href="#sale" class="header-nav-link">Sale</a>
-                </li>
-                <li class="header-nav-item">
-                    <a href="#reviews" class="header-nav-link">Reviews</a>
-                </li>
-                <li class="header-nav-item">
-                    <a href="#contact" class="header-nav-link">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="header-soc-list">
-            <li class="header-soc-item">
-                <a href="https://www.facebook.com/goITclub/" class="header-soc-link" target="_blank">
-                    <svg width="20" height="20">
-                        <use href="./img/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="header-soc-item">
-                <a href="https://www.instagram.com/goitclub/" class="header-soc-link" target="_blank">
-                    <svg width="20" height="20">
-                        <use href="./img/icons.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="header-soc-item">
-                <a href="https://www.youtube.com/c/GoIT" class="header-soc-link" target="_blank">
-                    <svg width="20" height="20">
-                        <use href="./img/icons.svg#icon-youtube"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-        <button class="menu-btn" type="button">
-            <svg class="menu-icon" width="34" height="34">
-                <use href="./img/icons.svg#icon-menu"></use>
-            </svg>
-        </button>
-    </div>
-    <div class="mob-menu">
-        <button class="menu-close-btn">
-            <svg class="menu-close-icon" width="34" height="34">
-                <use href="./img/icons.svg#icon-close"></use>
-            </svg>
-        </button>
-        <nav class="menu-nav">
-            <ul class="menu-nav-list">
-                <li class="menu-nav-item">
-                    <a href="./index.html" class="menu-nav-link current">Home</a>
-                </li>
-                <li class="menu-nav-item">
-                    <a href="#about" class="menu-nav-link">About Us</a>
-                </li>
-                <li class="menu-nav-item">
-                    <a href="#catalog" class="menu-nav-link">Catalog</a>
-                </li>
-                <li class="menu-nav-item">
-                    <a href="#sale" class="menu-nav-link">Sale</a>
-                </li>
-                <li class="menu-nav-item">
-                    <a href="#reviews" class="menu-nav-link">Reviews</a>
-                </li>
-                <li class="menu-nav-item">
-                    <a href="#contact" class="menu-nav-link">Contact Us</a>
-                </li>
-            </ul>
-        </nav>
-        <ul class="menu-soc-list">
-            <li class="menu-soc-item">
-                <a href="https://www.facebook.com/goITclub/" class="menu-soc-link" target="_blank">
-                    <svg width="20" height="20">
-                        <use href="./img/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="menu-soc-item">
-                <a href="https://www.instagram.com/goitclub/" class="menu-soc-link" target="_blank">
-                    <svg width="20" height="20">
-                        <use href="./img/icons.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="menu-soc-item">
-                <a href="https://www.youtube.com/c/GoIT" class="menu-soc-link" target="_blank">
-                    <svg width="20" height="20">
-                        <use href="./img/icons.svg#icon-youtube"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
+  <div class="container header-container">
+    <a href="" class="header-logo">watchcharm</a>
+    <nav class="header-nav">
+      <ul class="header-nav-list">
+        <li class="header-nav-item">
+          <a href="./index.html" class="header-nav-link current">Home</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="#about" class="header-nav-link">About Us</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="#catalog" class="header-nav-link">Catalog</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="#sale" class="header-nav-link">Sale</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="#reviews" class="header-nav-link">Reviews</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="#contact" class="header-nav-link">Contact Us</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header-soc-list">
+      <li class="header-soc-item">
+        <a
+          href="https://www.facebook.com/goITclub/"
+          class="header-soc-link"
+          target="_blank"
+        >
+          <svg width="20" height="20">
+            <use href="./img/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-soc-item">
+        <a
+          href="https://www.instagram.com/goitclub/"
+          class="header-soc-link"
+          target="_blank"
+        >
+          <svg width="20" height="20">
+            <use href="./img/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-soc-item">
+        <a
+          href="https://www.youtube.com/c/GoIT"
+          class="header-soc-link"
+          target="_blank"
+        >
+          <svg width="20" height="20">
+            <use href="./img/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <button class="menu-btn" type="button">
+      <svg class="menu-icon" width="34" height="34">
+        <use href="./img/icons.svg#icon-menu"></use>
+      </svg>
+    </button>
+  </div>
+  <div class="mob-menu">
+    <button class="menu-close-btn">
+      <svg class="menu-close-icon" width="34" height="34">
+        <use href="./img/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+    <nav class="menu-nav">
+      <ul class="menu-nav-list">
+        <li class="menu-nav-item">
+          <a href="./index.html" class="menu-nav-link current close-menu-link"
+            >Home</a
+          >
+        </li>
+        <li class="menu-nav-item">
+          <a href="#about" class="menu-nav-link close-menu-link">About Us</a>
+        </li>
+        <li class="menu-nav-item">
+          <a href="#catalog" class="menu-nav-link close-menu-link">Catalog</a>
+        </li>
+        <li class="menu-nav-item">
+          <a href="#sale" class="menu-nav-link close-menu-link">Sale</a>
+        </li>
+        <li class="menu-nav-item">
+          <a href="#reviews" class="menu-nav-link close-menu-link">Reviews</a>
+        </li>
+        <li class="menu-nav-item">
+          <a href="#contact" class="menu-nav-link close-menu-link"
+            >Contact Us</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <ul class="menu-soc-list">
+      <li class="menu-soc-item">
+        <a
+          href="https://www.facebook.com/goITclub/"
+          class="menu-soc-link"
+          target="_blank"
+        >
+          <svg width="20" height="20">
+            <use href="./img/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="menu-soc-item">
+        <a
+          href="https://www.instagram.com/goitclub/"
+          class="menu-soc-link"
+          target="_blank"
+        >
+          <svg width="20" height="20">
+            <use href="./img/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="menu-soc-item">
+        <a
+          href="https://www.youtube.com/c/GoIT"
+          class="menu-soc-link"
+          target="_blank"
+        >
+          <svg width="20" height="20">
+            <use href="./img/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
 </header>
