--- a/src/css/header.css
+++ b/src/css/header.css
@@ -47,15 +47,12 @@
   justify-content: space-between;
   padding-top: 240px;
   padding-bottom: 40px;
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-menu.is-open {
-  visibility: visible;
-  opacity: 1;
-  pointer-events: auto;
+  transform: translateX(0);
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -102,7 +99,7 @@
   position: absolute;
   width: 9px;
   height: 8px;
-  top: 20px;
+  top: calc(100% + 2px);
   left: 50%;
   transform: translateX(-50%);
   border-radius: 50%;
@@ -198,7 +195,7 @@
   .header-nav-link.current::after {
     content: '';
     position: absolute;
-    top: 18px;
+    top: calc(100% + 2px);
     left: 50%;
     transform: translateX(-50%);
     display: block;
