actually optimize images

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -39,7 +39,7 @@
           "
           media="(max-width: 767px)"
         />
-        <img src="./img/about/abouttab1x-min.webp" alt="Watch" />
+        <img src="./img/about/abouttab1x-min.webp" alt="Watch" loading="lazy" />
       </picture>
     </div>
   </div>
