--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -40,6 +40,7 @@
               class="hero-face"
               src="./img/hero/hero-face-desc.webp"
               alt="people"
+              loading="lazy"
             />
           </picture>
         </a>
@@ -72,6 +73,7 @@
         class="hero-watch"
         src="./img/hero/hero-watch-desc.webp"
         alt="watch"
+        loading="lazy"
       />
     </picture>
   </div>
