--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -7,6 +7,7 @@
           srcset="./img/reviews/john.webp 1x, ./img/reviews/john-2x.webp 2x"
           src="./img/reviews/john.webp"
           alt="Man"
+          loading="lazy"
         />
         <h3 class="reviews-name">John Wax</h3>
         <p class="reviews-text">
@@ -23,6 +24,7 @@
           "
           src="./img/reviews/victoria.webp"
           alt="Woman"
+          loading="lazy"
         />
         <h3 class="reviews-name">Victoria Romashenko</h3>
         <p class="reviews-text">
@@ -39,6 +41,7 @@
           "
           src="./img/reviews/anastasia.webp"
           alt="Woman"
+          loading="lazy"
         />
         <h3 class="reviews-name">Anastasia Trachuk</h3>
         <p class="reviews-text">
