--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -24,6 +24,7 @@
                 class="sale-list-pic"
                 src="./img/sale/sale-menu-1x.webp"
                 alt="Menu"
+                loading="lazy"
               />
             </picture>
           </li>
@@ -47,6 +48,7 @@
                 class="sale-list-pic"
                 src="./img/sale/sale-front-1x.webp"
                 alt="Front"
+                loading="lazy"
               />
             </picture>
           </li>
@@ -70,6 +72,7 @@
                 class="sale-list-pic"
                 src="./img/sale/sale-side-1x.webp"
                 alt="Side"
+                loading="lazy"
               />
             </picture>
           </li>
@@ -93,6 +96,7 @@
                 class="sale-list-pic"
                 src="./img/sale/sale-back-1x.webp"
                 alt="Back"
+                loading="lazy"
               />
             </picture>
           </li>
@@ -118,6 +122,7 @@
               class="sale-active-pic"
               src="./img/sale/sale-active-1x.webp"
               alt="Front"
+              loading="lazy"
             />
           </picture>
         </div>
