--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -29,6 +29,7 @@
             class="img"
             src="./img/catalog/GarminFenix7XPro@desk-1x.webp"
             alt="watch-1"
+            loading="lazy"
           />
         </picture>
         <div class="text-name-price">
@@ -65,6 +66,7 @@
             class="img"
             src="./img/catalog/GarminMarqAthlete@desk-1x.webp"
             alt="watch-2"
+            loading="lazy"
           />
         </picture>
         <div class="text-name-price">
@@ -99,6 +101,7 @@
             class="img"
             src="./img/catalog/GarminDescentMK1@desk-1x.webp"
             alt="watch-3"
+            loading="lazy"
           />
         </picture>
         <div class="text-name-price">
@@ -133,6 +136,7 @@
             class="img"
             src="./img/catalog/GarminD2@desk-1x.webp"
             alt="watch-4"
+            loading="lazy"
           />
         </picture>
         <div class="text-name-price">
@@ -160,6 +164,7 @@
             class="img"
             src="../img/catalog/GarminFenix6Pro@desk-1x.webp"
             alt="watch-5"
+            loading="lazy"
           />
         </picture>
         <div class="text-name-price">
@@ -187,6 +192,7 @@
             class="img"
             src="./img/catalog/TubeWatchS42@desk-1x.webp"
             alt="watch-6"
+            loading="lazy"
           />
         </picture>
         <div class="text-name-price">
