--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -66,7 +66,11 @@
           media="(max-width: 767px)"
         />
 
-        <img src="./img/contact/tab1x.webp" alt="watch picture" />
+        <img
+          src="./img/contact/tab1x.webp"
+          alt="watch picture"
+          loading="lazy"
+        />
       </picture>
     </div>
   </div>
